# CircuitNet

./: pyproject.toml  requirements.txt
routability_ir_drop_prediction/datasets/: augmentation.py  build_dataset.py
routability_ir_drop_prediction/models/: mavi.py
routability_ir_drop_prediction/utils/: configs.py  metrics.py
